* issue #7 resolved: Убрать внутренний scrollbar у popup'а

--- a/chrome_point_plus/css/options.css
+++ b/chrome_point_plus/css/options.css
@@ -21,9 +21,3 @@ body.point-options-castrate {
 .point-options-castrate .point-options-wrapper .tabs-content {
     height: 345px;
 }
-
-.point-options-castrate.point-firefox.point-options-wrapper .tabs-content,
-.point-options-castrate .point-firefox .point-options-wrapper .tabs-content,
-.point-firefox .point-options-castrate .point-options-wrapper .tabs-content {
-    max-width: 425px;
-}
